--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,15 +82,15 @@
                                 <p class="card-text"> Price:
                                     <% if(product[i].bonusPrice > 0) { %>
                                         <p class="line-through">
-                                            <%= product[i].price %>
+                                            <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
                                         </p>
                                         <p class="none">
-                                            <%= product[i].bonusPrice%>
+                                            <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
                                         </p>
 
                                         <% } else { %>
                                             <p class="normal">
-                                                <%= product[i].price %>
+                                                <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
                                             </p>
                                             <% } %>
                                 </p>
