--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -18,80 +18,87 @@
         <h2>CHI TIẾT SẢN PHẨM</h2>
     </div>
     <div class="container">
-        <section class="mb-5">
-            <div class="row">
-                <div class="col-md-6 mb-4 mb-md-0">
+        <form method="POST" action="/buynow/<%= product._id %>">
+            <section class="mb-5">
+                <div class="row">
+                    <div class="col-md-6 mb-4 mb-md-0">
 
-                    <div id="mdb-lightbox-ui"></div>
+                        <div id="mdb-lightbox-ui"></div>
 
-                    <div class="mdb-lightbox">
+                        <div class="mdb-lightbox">
 
-                        <div class="row product-gallery mx-1">
+                            <div class="row product-gallery mx-1">
 
-                            <div class="col-12 mb-0">
-                                <figure class="view overlay rounded z-depth-1 main-img">
-                                    <a href=<%=product.image%>
+                                <div class="col-12 mb-0">
+                                    <figure class="view overlay rounded z-depth-1 main-img">
+                                        <a href=<%=product.image%>
                             width="550" height="600">
                             <img src=<%= product.image%>
                                 class="img-fluid z-depth-1" width="550" height="600">
                             </a>
-                                </figure>
+                                    </figure>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <p class="mb-2 text-muted text-uppercase small">
-                        <%= product.name %>
-                    </p>
-                    <p><span class="mr-1"><strong>Giá: <%= product.price %></strong> VNĐ</span></p>
-                    <p class="pt-1">
-                        <%= product.description %>
-                    </p>
-                    <hr>
-                    <div class="table-responsive mb-2">
-                        <table class="table table-sm table-borderless">
-                            <tbody>
-                                <tr>
-                                    <td class="pl-0 pb-0 w-25">Số lượng</td>
-                                    <td class="pb-0">Chọn kích cỡ</td>
-                                </tr>
-                                <tr>
-                                    <td class="pl-0">
-                                        <div class="def-number-input number-input safari_only mb-0">
-                                            <input class="quantity" min="0" name="quantity" value="1" type="number">
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="mt-1">
-                                            <div class="form-check form-check-inline pl-0">
-                                                <input type="radio" class="form-check-input" id="small" name="materialExampleRadios" checked>
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="small">S</label>
-                                            </div>
-                                            <div class="form-check form-check-inline pl-0">
-                                                <input type="radio" class="form-check-input" id="medium" name="materialExampleRadios">
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="medium">L</label>
-                                            </div>
-                                            <div class="form-check form-check-inline pl-0">
-                                                <input type="radio" class="form-check-input" id="large" name="materialExampleRadios">
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="large">XL</label>
-                                            </div>
-                                            <div class="form-check form-check-inline pl-0">
-                                                <input type="radio" class="form-check-input" id="extralarge" name="materialExampleRadios">
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="extralarge">XXL</label>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="col-md-6">
+                        <p class="mb-2 text-muted text-uppercase small">
+                            <%= product.name %>
+                        </p>
+                        <% if(product.bonusPrice > 0) {%>
+                            <p><span class="mr-1"><strong>Giá: <%= product.bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %></strong></span></p>
+                            <% } else {%>
+                                <p><span class="mr-1"><strong>Giá: <%= product.price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %></strong></span></p>
+                                <% } %>
+
+                                    <p class="pt-1">
+                                        <%= product.description %>
+                                    </p>
+                                    <hr>
+                                    <div class="table-responsive mb-2">
+                                        <table class="table table-sm table-borderless">
+                                            <tbody>
+                                                <tr>
+                                                    <td class="pl-0 pb-0 w-25">Số lượng</td>
+                                                    <td class="pb-0">Chọn kích cỡ</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="pl-0">
+                                                        <div class="def-number-input number-input safari_only mb-0">
+                                                            <input class="quantity" min="0" name="quantity" value="1" type="number">
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="mt-1">
+                                                            <div class="form-check form-check-inline pl-0">
+                                                                <input type="radio" class="form-check-input" id="small" name="radSizeS" checked>
+                                                                <label class="form-check-label small text-uppercase card-link-secondary" for="small">S</label>
+                                                            </div>
+                                                            <div class="form-check form-check-inline pl-0">
+                                                                <input type="radio" class="form-check-input" id="medium" name="radSizeL">
+                                                                <label class="form-check-label small text-uppercase card-link-secondary" for="medium">L</label>
+                                                            </div>
+                                                            <div class="form-check form-check-inline pl-0">
+                                                                <input type="radio" class="form-check-input" id="large" name="radSizeXL">
+                                                                <label class="form-check-label small text-uppercase card-link-secondary" for="large">XL</label>
+                                                            </div>
+                                                            <div class="form-check form-check-inline pl-0">
+                                                                <input type="radio" class="form-check-input" id="extralarge" name="radSizeXXL">
+                                                                <label class="form-check-label small text-uppercase card-link-secondary" for="extralarge">XXL</label>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary btn-md mr-1 mb-2">Đặt mua ngay</button>
+                                    <a href="" class="btn btn-warning btn-md mr-1 mb-2"><i
+                        class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</a>
                     </div>
-                    <button type="button" class="btn btn-primary btn-md mr-1 mb-2">Đặt mua ngay</button>
-                    <button type="button" class="btn btn-warning btn-md mr-1 mb-2"><i
-                        class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</button>
                 </div>
-            </div>
-        </section>
+            </section>
+        </form>
     </div>
 </body>
 
