update contact page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,10 +1,18 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-<style>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>League store 77</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-</style>
+    <style>
+
+    </style>
+</head>
 
 <body>
     <h1 style="text-align: center;">Location</h1>
@@ -16,16 +24,29 @@
     <h1 style="text-align: center;">About us</h1>
     <div class="container">
         <!--three js representation-->
-
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="/icon/facebook.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">FACEBOOK</h5>
+                        <p class="card-text">Contact with us via Facebook</p>
+                        <a href="https://www.facebook.com/LeagueStore77" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="/icon/instagram.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">INSTAGRAM</h5>
+                        <p class="card-text">Contact with us via Instagram</p>
+                        <a href="https://www.facebook.com/LeagueStore77" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <script>
-        var map = document.getElementById("map");
-        var canvas = document.getElementById("about");
-        canvas.height = 150;
-        canvas.width = map.width;
-        var ctx = canvas.getContext("2d");
-        ctx.fillStyle = "cyan";
-        ctx.fillRect(0, 0, canvas.width, canvas.height);
-    </script>
 </body>
+
+</html>
