--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <style>
-
+        img.hover-shadow {
+            transition: 0.3s;
+        }
+        
+        .hover-shadow:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
     </style>
 </head>
 
@@ -27,7 +33,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="card">
-                    <img class="card-img-top" src="/icon/facebook.png" alt="Card image cap">
+                    <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">FACEBOOK</h5>
                         <p class="card-text">Contact with us via Facebook</p>
@@ -37,7 +43,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <img class="card-img-top" src="/icon/instagram.png" alt="Card image cap">
+                    <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">INSTAGRAM</h5>
                         <p class="card-text">Contact with us via Instagram</p>
