add new feature

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -39,6 +39,16 @@
             </li>
 
             <li><a href="contact">Liên hệ</a></li>
+
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Quản lý<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Quản lý người dùng</a></li>
+                    <li><a href="#">Quản lý sản phẩm</a></li>
+                    <li><a href="#">Thống kê</a></li>
+                    <li><a href="#">Chiến dịch bán hàng</a></li>
+                </ul>
+            </li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a></li>
