--- a/views/login.ejs
+++ b/views/login.ejs
@@ -278,16 +278,19 @@
     #icon {
         width: 60%;
     }
-    .container{
+    
+    .container {
+        margin-top: 100px;
         text-align: center;
         color: rgb(8, 166, 240);
     }
 </style>
 
+<div class="container">
+    <h3>Chào mừng bạn đến với LEAGUE STORE 77</h3>
+</div>
+
 <div class="wrapper fadeInDown">
-    <div class="container">
-        <h3>Chào mừng bạn đến với LEAGUE STORE 77</h3>
-    </div>
     <div id="formContent">
         <!-- Tabs Titles -->
         <!-- Login Form -->
