--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -26,10 +26,10 @@
 
 <body>
     <div class="container">
-        <h2 style="text-align: center;"> User management</h2>
+        <h2 style="margin-left: 35%;"> User management</h2>
     </div>
 
-    <div style="margin-left: 25%;" class="container">
+    <div style="margin-left: 35%;" class="container">
         <form method="POST" action="/adduser">
             <div class="form-group">
                 <label for="editUserId"> User ID </label>
@@ -38,27 +38,27 @@
 
             <div class="form-group">
                 <label for="editUserName">User Name</label>
-                <input type="text" name="name" class="form-control" id="editUserName" placeholder="User name">
+                <input type="text" name="name" class="form-control" id="editUserName" placeholder="Tên tài khoản">
             </div>
 
             <div class="form-group">
                 <label for="editUserPassword">Password</label>
-                <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Password"></input>
+                <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Mật khẩu"></input>
             </div>
 
             <div class="form-group">
                 <label for="editUserAddress">Address</label>
-                <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Address">
+                <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Địa chỉ">
             </div>
 
             <div class="form-group">
                 <label for="editUserEmail">Email</label>
-                <input type="email" name="email" class="form-control " id="editUserEmail" placeholder="Email">
+                <input type="email" name="email" class="form-control " id="editUserEmail" placeholder="Thư điện tử">
             </div>
 
             <div class="form-group ">
                 <label for="editUserPhone">Phone number</label>
-                <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Phone">
+                <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Điện thoại">
             </div>
 
             <button type="submit" class="btn btn-primary ">Add</button>
