--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,9 +45,16 @@
             <option value="20">20</option> 
         </select></p>
         </div>
+
+        <div class="_adduser">
+            <a class="btn btn-primary" href="/adduser">
+                <img src="/assets/plus.png"> Thêm mới người dùng</img>
+            </a>
+        </div>
+
     </div>
 
-    <div class="container">
+    <div style="margin-top: 15px; " class="container">
         <table class="table table-bordered">
             <thead class="thead-light">
                 <tr>
@@ -57,9 +64,9 @@
                     <th scope="col">Số điện thoại</th>
                     <th scope="col">Email</th>
                     <th scope="col">ID người dùng</th>
-                    <th scope="col">Password</th>
-                    <th scope="col">Create date</th>
-                    <th scope="col">Update date</th>
+                    <th scope="col">Mật khẩu</th>
+                    <th scope="col">Ngày tạo</th>
+                    <th scope="col">Ngày cập nhật</th>
                     <th scope="col">Chỉnh sửa</th>
                 </tr>
             </thead>
