--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,44 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<style>
+    img.hover-shadow {
+        transition: 0.3s;
+    }
+    
+    .hover-shadow:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+</style>
 <footer>
-    <p>2021 CanhVV Development</p>
+    <div class="container">
+        <!--three js representation-->
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <a href="https://www.facebook.com/LeagueStore77">
+                        <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
+                    </a>
+
+                    <div class="card-body">
+                        <h5 class="card-title">FACEBOOK</h5>
+                        <p class="card-text">Contact with us via Facebook</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <a href="https://www.facebook.com/LeagueStore77">
+                        <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
+                    </a>
+
+                    <div class="card-body">
+                        <h5 class="card-title">INSTAGRAM</h5>
+                        <p class="card-text">Contact with us via Instagram</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
