--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,23 +1,27 @@
-<div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="/assets/ao2.png" alt="First slide" width="1080" height="120">
-            </div>
-            <div class="item">
-                <img src="/assets/ao2.png" alt="Second slide" width="1080" height="120">
-            </div>
-            <div class="item">
-                <img src="/assets/ao2.png" alt="Third slide" width="1080" height="120">
-            </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="/assets/ao2.png" alt="First slide">
         </div>
-        <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="item">
+            <img src="/assets/ao2.png" alt="Second slide">
+        </div>
+        <div class="item">
+            <img src="/assets/ao2.png" alt="Third slide">
+        </div>
     </div>
+    <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
+<script>
+    $('.carouselExampleIndicators').carousel({
+        interval: 2000
+    });
+</script>
