--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
         }
         
         .hover-shadow:hover {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
         }
     </style>
 </head>
@@ -195,8 +195,36 @@
 
             <footer>
                 <div class="container">
+                    <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
+                </div>
+                <div class="container">
                     <!--three js representation-->
                     <div class="row">
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <a href="sendemail">
+                                    <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">EMAIL</h5>
+                                    <p class="card-text">Contact with us via Email</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <a href="">
+                                    <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">PHONE</h5>
+                                    <p class="card-text">Phone num: (+84) 0862263986</p>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="https://www.facebook.com/LeagueStore77">
@@ -209,6 +237,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="https://www.facebook.com/LeagueStore77">
@@ -223,6 +252,7 @@
                         </div>
                     </div>
                 </div>
+                <p>Địa chỉ: 77 Trại Cá, Trương Định, Hai Bà Trưng, Hà Nội</p>
             </footer>
 </body>
 
