--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,17 +42,29 @@
 
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Quản lý<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Quản lý người dùng</a></li>
-                    <li><a href="#">Quản lý sản phẩm</a></li>
-                    <li><a href="#">Thống kê</a></li>
-                    <li><a href="#">Chiến dịch bán hàng</a></li>
+                    <li><a href="admin">Quản lý người dùng</a></li>
+                    <li><a href="producttable">Quản lý sản phẩm</a></li>
+                    <li><a href="summary">Thống kê</a></li>
+                    <li><a href="campaign">Chiến dịch bán hàng</a></li>
                 </ul>
             </li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a></li>
-            <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Đăng nhập</a></li>
+            <li class="dropdown">
+                <% if(user !== "Đăng nhập") {%>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <%= user %><span class="caret"></span></a>
+                    <% } else { %>
+                        <a href="login">
+                            <%= user %><span class="caret"></span></a>
+                        <% } %>
+
+                            <ul class="dropdown-menu">
+                                <li><a href="home"><span class="glyphicon glyphicon-log-in"></span> Đăng xuất </a></li>
+                            </ul>
+            </li>
         </ul>
     </div>
 </nav>
