--- a/views/login.ejs
+++ b/views/login.ejs
@@ -138,6 +138,32 @@
         border-radius: 5px 5px 5px 5px;
     }
     
+    input[type=password] {
+        background-color: #f6f6f6;
+        border: none;
+        color: #0d0d0d;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 5px;
+        width: 85%;
+        border: 2px solid #f6f6f6;
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        -webkit-border-radius: 5px 5px 5px 5px;
+        border-radius: 5px 5px 5px 5px;
+    }
+    
+    input[type=checkbox] {
+        color: #0d0d0d;
+        font-size: 16px;
+    }
+    
     input[type=text]:focus {
         background-color: #fff;
         border-bottom: 2px solid #5fbae9;
@@ -147,109 +173,16 @@
         color: #cccccc;
         padding-left: 0px;
     }
-    /* ANIMATIONS */
-    /* Simple CSS3 Fade-in-down Animation */
     
-    .fadeInDown {
-        -webkit-animation-name: fadeInDown;
-        animation-name: fadeInDown;
-        -webkit-animation-duration: 1s;
-        animation-duration: 1s;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
+    input[type=password]:focus {
+        background-color: #fff;
+        border-bottom: 2px solid #5fbae9;
     }
     
-    @-webkit-keyframes fadeInDown {
-        0% {
-            opacity: 0;
-            -webkit-transform: translate3d(0, -100%, 0);
-            transform: translate3d(0, -100%, 0);
-        }
-        100% {
-            opacity: 1;
-            -webkit-transform: none;
-            transform: none;
-        }
+    input[type=password]:placeholder {
+        color: #cccccc;
+        padding-left: 0px;
     }
-    
-    @keyframes fadeInDown {
-        0% {
-            opacity: 0;
-            -webkit-transform: translate3d(0, -100%, 0);
-            transform: translate3d(0, -100%, 0);
-        }
-        100% {
-            opacity: 1;
-            -webkit-transform: none;
-            transform: none;
-        }
-    }
-    /* Simple CSS3 Fade-in Animation */
-    
-    @-webkit-keyframes fadeIn {
-        from {
-            opacity: 0;
-        }
-        to {
-            opacity: 1;
-        }
-    }
-    
-    @-moz-keyframes fadeIn {
-        from {
-            opacity: 0;
-        }
-        to {
-            opacity: 1;
-        }
-    }
-    
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-        }
-        to {
-            opacity: 1;
-        }
-    }
-    
-    .fadeIn {
-        opacity: 0;
-        -webkit-animation: fadeIn ease-in 1;
-        -moz-animation: fadeIn ease-in 1;
-        animation: fadeIn ease-in 1;
-        -webkit-animation-fill-mode: forwards;
-        -moz-animation-fill-mode: forwards;
-        animation-fill-mode: forwards;
-        -webkit-animation-duration: 1s;
-        -moz-animation-duration: 1s;
-        animation-duration: 1s;
-    }
-    
-    .fadeIn.first {
-        -webkit-animation-delay: 0.4s;
-        -moz-animation-delay: 0.4s;
-        animation-delay: 0.4s;
-    }
-    
-    .fadeIn.second {
-        -webkit-animation-delay: 0.6s;
-        -moz-animation-delay: 0.6s;
-        animation-delay: 0.6s;
-    }
-    
-    .fadeIn.third {
-        -webkit-animation-delay: 0.8s;
-        -moz-animation-delay: 0.8s;
-        animation-delay: 0.8s;
-    }
-    
-    .fadeIn.fourth {
-        -webkit-animation-delay: 1s;
-        -moz-animation-delay: 1s;
-        animation-delay: 1s;
-    }
-    /* Simple CSS3 Fade-in Animation */
     
     .underlineHover:after {
         display: block;
@@ -287,7 +220,12 @@
 </style>
 
 <div class="container">
-    <h3>Chào mừng bạn đến với LEAGUE STORE 77</h3>
+    <h1>Chào mừng bạn đến với LEAGUE STORE 77</h1>
+    <h3>Đăng nhập</h3>
+
+    <h5 style="color: red;">
+        <%= loginstate %>
+    </h5>
 </div>
 
 <div class="wrapper fadeInDown">
@@ -296,7 +234,8 @@
         <!-- Login Form -->
         <form action="/login" method="POST">
             <input type="text" id="login" class="fadeIn second" name="user" placeholder="Tên đăng nhập">
-            <input type="text" id="password" class="fadeIn third" name="password" placeholder="Mật khẩu">
+            <input type="password" id="password" class="fadeIn third" name="password" placeholder="Mật khẩu"><br><br>
+            <input type="checkbox" id="showhidepassword" onclick="showhide()"> Hiện mật khẩu<br><br>
             <input type="submit" class="fadeIn fourth" value="Đăng nhập">
         </form>
 
@@ -307,3 +246,14 @@
 
     </div>
 </div>
+
+<script>
+    function showhide() {
+        var show = document.getElementById('password');
+        if (show.type === "password") {
+            show.type = "text";
+        } else {
+            show.type = "password";
+        }
+    }
+</script>
