--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -103,7 +103,7 @@
                             </td>
                             <td>
                                 <a href="/edituser/<%=data[i]._id %>" class="btn btn-primary">Sửa</a>
-                                <a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=data[i]._id %>" data-target="#modal-delete-model">Xoá</a>
+                                <a style="margin-top: 5px;" href="" class="btn btn-danger" data-toggle="modal" data-id="<%=data[i]._id %>" data-target="#modal-delete-model">Xoá</a>
                             </td>
                         </tr>
                         <% } %>
