--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,6 +46,7 @@
                     <li><a href="producttable">Quản lý sản phẩm</a></li>
                     <li><a href="summary">Thống kê</a></li>
                     <li><a href="campaign">Chiến dịch bán hàng</a></li>
+                    <li><a href="upload">Upload</a></li>
                 </ul>
             </li>
 
