--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -18,8 +18,59 @@
             width: 50%;
         }
         
+        input[type="password"] {
+            width: 50%;
+        }
+        
         textarea[type="textarea"] {
             width: 50%;
+        }
+        
+        .wrapper {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            min-height: 100%;
+            padding: 20px;
+        }
+        
+        #formContent {
+            -webkit-border-radius: 10px 10px 10px 10px;
+            border-radius: 10px 10px 10px 10px;
+            background: #fff;
+            padding: 30px;
+            width: 90%;
+            max-width: 450px;
+            position: relative;
+            padding: 0px;
+            -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+            box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+            text-align: center;
+        }
+        
+        input[type=text],
+        input[type=password],
+        input[type=email] {
+            background-color: #f6f6f6;
+            border: none;
+            color: #0d0d0d;
+            padding: 15px 32px;
+            text-align: left;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 1px;
+            width: 85%;
+            border: 2px solid #f6f6f6;
+            -webkit-transition: all 0.5s ease-in-out;
+            -moz-transition: all 0.5s ease-in-out;
+            -ms-transition: all 0.5s ease-in-out;
+            -o-transition: all 0.5s ease-in-out;
+            transition: all 0.5s ease-in-out;
+            -webkit-border-radius: 5px 5px 5px 5px;
+            border-radius: 5px 5px 5px 5px;
         }
     </style>
 </head>
@@ -29,40 +80,42 @@
         <h2 style="margin-left: 35%;"> User management</h2>
     </div>
 
-    <div style="margin-left: 35%;" class="container">
-        <form method="POST" action="/adduser">
-            <div class="form-group">
-                <label for="editUserId"> User ID </label>
-                <input type="text" name="userId" class="form-control" id="editUserId" placeholder="Id">
-            </div>
+    <div class="wrapper">
+        <div class="formContent">
+            <form method="POST" action="/adduser">
+                <div class="form-group">
+                    <label for="editUserId"> User ID </label>
+                    <input type="text" name="userId" class="form-control" id="editUserId" placeholder="Id">
+                </div>
 
-            <div class="form-group">
-                <label for="editUserName">User Name</label>
-                <input type="text" name="name" class="form-control" id="editUserName" placeholder="Tên tài khoản">
-            </div>
+                <div class="form-group">
+                    <label for="editUserName">User Name</label>
+                    <input type="text" name="name" class="form-control" id="editUserName" placeholder="Tên tài khoản">
+                </div>
 
-            <div class="form-group">
-                <label for="editUserPassword">Password</label>
-                <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Mật khẩu"></input>
-            </div>
+                <div class="form-group">
+                    <label for="editUserPassword">Password</label>
+                    <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Mật khẩu">
+                </div>
 
-            <div class="form-group">
-                <label for="editUserAddress">Address</label>
-                <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Địa chỉ">
-            </div>
+                <div class="form-group">
+                    <label for="editUserAddress">Address</label>
+                    <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Địa chỉ">
+                </div>
 
-            <div class="form-group">
-                <label for="editUserEmail">Email</label>
-                <input type="email" name="email" class="form-control " id="editUserEmail" placeholder="Thư điện tử">
-            </div>
+                <div class="form-group">
+                    <label for="editUserEmail">Mail</label><br>
+                    <input type="email" name="email" class="form-control" id="editUserEmail" placeholder="Thư điện tử">
+                </div>
 
-            <div class="form-group ">
-                <label for="editUserPhone">Phone number</label>
-                <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Điện thoại">
-            </div>
+                <div class="form-group">
+                    <label for="editUserPhone">Phone number</label>
+                    <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Điện thoại">
+                </div>
 
-            <button type="submit" class="btn btn-primary ">Add</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Add</button>
+            </form>
+        </div>
     </div>
 </body>
 
