--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,6 +17,20 @@
         .hover-shadow:hover {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
+        
+        .container {
+            align-items: center;
+        }
+        
+        footer {
+            text-align: center;
+            padding: 3px;
+            color: black;
+            bottom: 0rem;
+            position: relative;
+            width: 100%;
+            opacity: calc();
+        }
     </style>
 </head>
 
@@ -24,35 +38,69 @@
     <h1 style="text-align: center;">Location</h1>
 
     <div class="container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4675.809302759749!2d105.76700544992087!3d21.033413609895227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b91d1d5e75%3A0x2b706ee46fab3821!2sHD%20Mon%20City!5e0!3m2!1svi!2s!4v1636988215300!5m2!1svi!2s"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" id="map"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=21.0217269,105.7914069/20.9932004,105.8485231/@21.0064702,105.7835865,13z/data=!3m1!4b1!4m4!4m3!1m1!4e1!1m0" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" id="map"></iframe> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d29796.61087169622!2d105.8073626613405!3d21.009612367297017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d21.021726899999997!2d105.7914069!4m5!1s0x3135ac0e787fe273%3A0x7728f6e456c3a685!2zNjYgTmfDtSAxOTEgTWluaCBLaGFpLCBNaW5oIEtoYWksIEhhaSBCw6AgVHLGsG5nLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!3m2!1d20.9974445!2d105.8583999!5e0!3m2!1svi!2s!4v1639410988768!5m2!1svi!2s"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <h1 style="text-align: center;">About us</h1>
-    <div class="container">
-        <!--three js representation-->
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card">
-                    <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">FACEBOOK</h5>
-                        <p class="card-text">Contact with us via Facebook</p>
-                        <a href="https://www.facebook.com/LeagueStore77" class="btn btn-primary">Go</a>
+    <footer>
+        <div class="container">
+            <!--three js representation-->
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <a href="sendemail">
+                            <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">EMAIL</h5>
+                            <p class="card-text">Contact with us via Email</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">INSTAGRAM</h5>
-                        <p class="card-text">Contact with us via Instagram</p>
-                        <a href="https://www.facebook.com/LeagueStore77" class="btn btn-primary">Go</a>
+
+                <div class="col-sm-6">
+                    <div class="card">
+                        <a href="">
+                            <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">PHONE</h5>
+                            <p class="card-text">Phone num: (+84) 0862263986</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-6">
+                    <div class="card">
+                        <a href="https://www.facebook.com/LeagueStore77">
+                            <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
+                        </a>
+
+                        <div class="card-body">
+                            <h5 class="card-title">FACEBOOK</h5>
+                            <p class="card-text">Contact with us via Facebook</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="card">
+                        <a href="https://www.facebook.com/LeagueStore77">
+                            <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
+                        </a>
+
+                        <div class="card-body">
+                            <h5 class="card-title">INSTAGRAM</h5>
+                            <p class="card-text">Contact with us via Instagram</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
+    </footer>
 </body>
 
 </html>
