--- a/views/header.ejs
+++ b/views/header.ejs
@@ -40,21 +40,30 @@
 
             <li><a href="contact">Liên hệ</a></li>
 
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Quản lý<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="admin">Quản lý người dùng</a></li>
-                    <li><a href="producttable">Quản lý sản phẩm</a></li>
-                    <li><a href="summary">Thống kê</a></li>
-                    <li><a href="campaign">Chiến dịch bán hàng</a></li>
-                    <li><a href="upload">Upload</a></li>
-                </ul>
-            </li>
-
+            <% if(user !== "Đăng nhập") {%>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Quản lý<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="admin">Quản lý người dùng</a></li>
+                        <li><a href="producttable">Quản lý sản phẩm</a></li>
+                        <li><a href="summary">Thống kê</a></li>
+                        <li><a href="campaign">Chiến dịch bán hàng</a></li>
+                        <li><a href="upload">Upload</a></li>
+                    </ul>
+                </li>
+                <%}%>
+                    <li>
+                        <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Tìm kiếm </button>
+                        </form>
+                    </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a></li>
+            <li>
+                <a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a>
+            </li>
             <li class="dropdown">
-                <% if(user !== "Đăng nhập") {%>
+                <% if(user !== "Đăng nhập") { %>
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <%= user %><span class="caret"></span></a>
                     <% } else { %>
@@ -63,7 +72,9 @@
                         <% } %>
 
                             <ul class="dropdown-menu">
-                                <li><a href="home"><span class="glyphicon glyphicon-log-in"></span> Đăng xuất </a></li>
+                                <li>
+                                    <a href="home"><span class="glyphicon glyphicon-log-in"></span> Đăng xuất </a>
+                                </li>
                             </ul>
             </li>
         </ul>
