--- a/views/index.ejs
+++ b/views/index.ejs
@@ -252,7 +252,7 @@
                         </div>
                     </div>
                 </div>
-                <p>Địa chỉ: 77 Trại Cá, Trương Định, Hai Bà Trưng, Hà Nội</p>
+                <p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
             </footer>
 </body>
 
